Palette Docker: bug 402072; color selection in the combobox

Summary:
This diff fixes two issues:

1, bug 402072, where the user is unable to reselect a previously
selected color from the palette after picking another color by other
means.

This is fixed by clearing currentIndex in KisPaletteView upon FG color
change in the resource provider. That way the swatch stays selected, so
the user knows which color they had selected before, but enables them to
reselect the color.

2, Another issue, probably originating from commit 69915f533a6: if the
user selects a color in the KisPaletteComboBox, nothing happens.

KisPaletteComboBox calls KisPaletteView::selectClosestColor() to select
the clicked color in the palette. However, from said commit, the
function is called only with specific setting on. I have added another
slot specifically for KisPaletteComboBox, which unconditionally calls
said function.

BUG: 402072

Reviewers: #krita, woltherav

Reviewed By: #krita, woltherav

Subscribers: woltherav

Tags: #krita

Differential Revision: https://phabricator.kde.org/D17728